--- a/calculadora de media.html
+++ b/calculadora de media.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>Somando Valores</h1>
+    <h1>Calculadora de Média</h1>
     <input type="number" name="u1" id="u1"> +
     <input type="number" name="u2" id="u2"> +
     <input type="number" name="u3" id="u3"> +
